# cob_environment_perception

./: .cproject  .gitignore  .gitmodules  .project  .travis.rosinstall.kinetic  .travis.rosinstall.melodic  .travis.yml  CMakeLists.txt  Makefile  README  README.md  cmake_install.cmake  mainpage.dox  manifest.xml  nodelet_plugins.xml  rosdep.yaml  stack.xml
cob_3d_evaluation_features/: CMakeLists.txt  README_evaluation  package.xml
cob_3d_evaluation_features/scripts/: evaluateFPFH.sh  extractFeatureValues.sh  reduceFeatureValues.sh
cob_3d_evaluation_features/src/: evaluate_test_data.cpp  evaluation_features.cpp  evaluation_features_fpfh.cpp  evaluation_fpfh_svm_trainer.cpp  merge_knn_training_data.cpp  reduce_fpfh_training_data.cpp
cob_3d_experience_mapping/: CMakeLists.txt  package.xml  rosdoc.yaml
cob_3d_experience_mapping/cfg/: VisualizationSettings.cfg  settings.cfg  visualization.cfg
cob_3d_experience_mapping/config/: barks.yaml
cob_3d_experience_mapping/evaluation/: eval_result.py  exp_mapping_lemon_eval.cpp  general_param.xml  run.sh  run_tests.py
cob_3d_experience_mapping/include/: ros_node.hpp
cob_3d_experience_mapping/launch/: irat.launch  sim.launch  sim_stdr.launch  sim_stdr_ratslam.launch  sim_stdr_server.launch
cob_3d_experience_mapping/msg/: SensorInfo.msg  SensorInfoArray.msg
cob_3d_experience_mapping/simulation/: beam.py  sim_features.py  simulation.launch
cob_3d_experience_mapping/src/: convert.cpp  convert.py  exp2ft.py  exp_mapping_lemon.cpp  exp_mapping_lemon_standalone.cpp  server.cpp  sim_barks.cpp
cob_3d_experience_mapping/standalone/: CMakeLists.txt  build.sh
cob_3d_experience_mapping/tools/: local_path_planning.cpp
cob_3d_experience_mapping/visualization/: wifi.html
cob_3d_features/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  package.xml
cob_3d_features/evaluation/: create_eval_kp.sh  delta.py  dist1.plot  dist2.plot  evaluate.py  evaluate_kp.py  run_eval.sh
cob_3d_features/rosbuild/: manifest.xml
cob_3d_features_evaluation/: CMakeLists.txt  package.xml
cob_3d_features_evaluation/evaluation/: create_eval.sh  create_eval_raidus.sh  create_eval_timing_single_file.sh  evaluate.py  evaluate_pr.py  plot_qual.py  qual.py  run_eval_kp.sh  run_eval_radius.sh
cob_3d_fov_segmentation/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_3d_fov_segmentation/cfg/: field_of_view.cfg  fov_segmentation.cfg
cob_3d_mapping_common/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_3d_mapping_common/cfg/: field_of_view.cfg  keyframe_detector.cfg
cob_3d_mapping_demonstrator/: CMakeLists.txt  mainpage.dox  manifest.xml  md.urdf.xacro  package.xml  plugin_description.xml  rviz.vcg  start.sh  start_ni2.sh
cob_3d_mapping_demonstrator/config/: cartons.txt  command_gui_buttons.yaml  joint_configurations.yaml  plugin.yaml  rviz.vcg  topics.yaml
cob_3d_mapping_demonstrator/lib/: plugin.yaml
cob_3d_mapping_demonstrator/mc/: Doxyfile  Makefile  code.c
cob_3d_mapping_features/: CMakeLists.txt  manifest.xml  nodelet_plugins.xml
cob_3d_mapping_features/cfg/: plane_extraction_nodelet.cfg
cob_3d_mapping_filters/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
cob_3d_mapping_gazebo/: CMakeLists.txt  cmake_install.cmake  manifest.xml  package.xml
cob_3d_mapping_gazebo/launch/: spawn_all.launch  spawn_corner_120.launch  spawn_corner_30.launch  spawn_corner_45.launch  spawn_corner_60.launch  spawn_corner_90.launch  spawn_cube.launch  spawn_cylinder.launch  spawn_cylinder_small.launch  spawn_double_corner.launch  spawn_plane.launch  table_chair.launch
cob_3d_mapping_gazebo/objects/: corner_150.urdf  corner_30.urdf  corner_45.urdf  cube.urdf  cylinder.urdf  cylinder2.urdf  double_corner.urdf  plane.urdf
cob_3d_mapping_gazebo/scripts/: RecordCorner.py  RecordCube.py  RecordCylinder.py  RecordDiffRange.py  TFBroadcaster.py
cob_3d_mapping_geometry_map/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_3d_mapping_geometry_map/cfg/: feature_map_node.cfg  geometry_map_node.cfg
cob_3d_mapping_geometry_map/scripts/: show_all.py
cob_3d_mapping_geometry_map_v2/: CMakeLists.txt  package.xml
cob_3d_mapping_geometry_map_v2/cfg/: geometry_map_node.cfg
cob_3d_mapping_msgs/: CMakeLists.txt  manifest.xml  package.xml
cob_3d_mapping_msgs/action/: TableObjectCluster.action  Trigger.action  TriggerMapping.action  TriggerSegmentation.action
cob_3d_mapping_msgs/msg/: CurvedPolygon.msg  CurvedPolygon_Array.msg  Feature.msg  FilterObject.msg  Plane.msg  PlaneExtractionAction.msg  PlaneExtractionActionFeedback.msg  PlaneExtractionActionGoal.msg  PlaneExtractionActionResult.msg  PlaneExtractionFeedback.msg  PlaneExtractionGoal.msg  PlaneScene.msg  Point2D.msg  PointArray.msg  Polygon.msg  PolygonArray.msg  PolygonArrayArray.msg  PolylinePoint.msg  Shape.msg  Shape.msg.orig  ShapeArray.msg  SimilarityScore.msg  TableObjectClusterAction.msg  TableObjectClusterActionFeedback.msg  TableObjectClusterActionGoal.msg  TableObjectClusterActionResult.msg  TableObjectClusterGoal.msg  TableObjectClusterResult.msg  TabletopDetectionResult.msg  TriggerMappingAction.msg  TriggerMappingActionFeedback.msg  TriggerMappingActionGoal.msg  TriggerMappingActionResult.msg  TriggerMappingGoal.msg  TriggerMappingResult.msg  curved_polygon.msg  set_name.msg
cob_3d_mapping_msgs/srv/: GetApproachPoseForPolygon.srv  GetApproachPoseForTable.srv  GetGeometricMap.srv  GetObjectsOfClass.srv  GetPointMap.srv  GetTables.srv  ModifyMap.srv  MoveToTable.srv  SetBoundingBoxes.srv  SetGeometryMap.srv  UpdateMap.srv
cob_3d_mapping_pipeline/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_3d_mapping_pipeline/launch/: cluster_for_classification.launch  mapping.launch  mapping_bag_file.launch  mapping_demo.launch  testing.launch  (+10 more)
cob_3d_mapping_point_map/: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
cob_3d_mapping_rviz_plugins/: .CMakeLists.txt.swp  CMakeLists.txt  mainpage.dox  manifest.xml  plugin_description.xml  rviz_camera_plugin.yaml
(+1715 files in other folders)
