<package>
  <name>cob_3d_evaluation_features</name>
  <version>1.0.0</version>
  
  <description>
     PCL feature evaluation.
  </description>
  
  <license>LGPL</license>
  
  <maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
  <author>Georg Arbeiter</author>
  
  <url>http://wiki.ros.org/cob_3d_evaluation_features</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>cob_3d_features</build_depend>
  <build_depend>cob_3d_mapping_common</build_depend>
  <build_depend>cob_3d_mapping_tools</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cob_3d_features</run_depend>
  <run_depend>cob_3d_mapping_common</run_depend>
  <run_depend>cob_3d_mapping_tools</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>

