<?xml version="1.0"?>
<package format="2">
	<name>cob_3d_evaluation_features</name>
	<version>1.0.0</version>

	<description>
		PCL feature evaluation.
	</description>

	<license>LGPL</license>

	<maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
	<author>Georg Arbeiter</author>

	<url>http://wiki.ros.org/cob_3d_evaluation_features</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>cmake_modules</depend>
	<depend>cob_3d_features</depend>
	<depend>cob_3d_mapping_common</depend>
	<depend>cob_3d_mapping_tools</depend>
	<depend>sensor_msgs</depend>
</package>

