<?xml version="1.0"?>
<package format="2">
	<name>cob_3d_experience_mapping</name>
	<version>0.0.0</version>
	<description>The cob_3d_experience_mapping package</description>

	<maintainer email="josh@todo.todo">josh</maintainer>
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->

	<license>TODO</license>

	<!-- <url type="website">http://wiki.ros.org/cob_3d_experience_mapping</url> -->

	<buildtool_depend>catkin</buildtool_depend>

	<depend>cmake_modules</depend>
	<depend>cob_3d_mapping_common</depend>
	<depend>cob_3d_visualization</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>eigen</depend>
	<depend>liblemon</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>rospy</depend>
</package>
